--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header>
     <ul>
-        <li><a href="/">main</a></li>
+        <li><a href="./">main</a></li>
         <li><a href="./modeling.html">modeling</a></li>
         <li><a href="./scaning.html">scaning</a></li>
     </ul>
